Changed symantics of save/validate so that updates are not automatically saved when validation fails. Added new method to allow changes to be discarded
git-svn-id: https://svn.codehaus.org/grails/trunk@903 1cfb16fd-6d17-0410-8ff1-b7e8e1e2867d